@@ -162,6 +162,19 @@ public class ConcurrentPointQuadTree<T extends Positionable> extends Rectangle i
 	}
 
 	public void debugRender(Graphics g) {
+		if(getX() - g.getTranslationX() > g.getViewportWidth()) {
+			return;
+		}
+		if(getY() - g.getTranslationY() > g.getViewportHeight()) {
+			return;
+		}
+		if(getMaxX() - g.getTranslationX() < 0f) {
+			return;
+		}
+		if(getMaxY() - g.getTranslationY() < 0f) {
+			return;
+		}
+
 		Color tmp = g.getColor();
 
 		lock.readLock().lock();
