@@ -129,6 +129,19 @@ public class RegionQuadTree<T extends CollisionShape> extends PointQuadTree<T> {
 
 	@Override
 	public void debugRender(Graphics g) {
+		if(getX() - g.getTranslationX() > g.getViewportWidth()) {
+			return;
+		}
+		if(getY() - g.getTranslationY() > g.getViewportHeight()) {
+			return;
+		}
+		if(getMaxX() - g.getTranslationX() < 0f) {
+			return;
+		}
+		if(getMaxY() - g.getTranslationY() < 0f) {
+			return;
+		}
+
 		Color tmp = g.getColor();
 
 		if (topLeft != null) {
